# union-old

./: Cargo.toml  README.md  Union.drawio  build-claim_token.sh  build-fungible_token.sh  build-shares_token.sh  build-union_wallet.sh  build-voting_manager.sh  build-voting_power_ledger.sh  build-voting_token.sh  build-votings.sh  build.sh  dfx.json  package-lock.json  package.json
src/claim_token/: Cargo.toml  claim_token.did  lib.rs  utils.rs
src/communitea_assets/src/: index.html  index.js
src/fungible_token/: Cargo.toml  fungible_token.did  lib.rs  utils.rs
src/ic-logger/: Cargo.toml
src/ic-logger/src/: lib.rs
src/shares_token/: Cargo.toml  lib.rs  utils.rs
src/union-utils/: Cargo.toml
src/union-utils/src/: fns.rs  lib.rs  traits.rs
src/union_utils/: Cargo.toml
src/union_utils/src/: fns.rs  traits.rs  types.rs
src/union_wallet/: Cargo.toml  lib.rs  union_wallet.did
src/voting_manager/: Cargo.toml  lib.rs  utils.rs  voting_manager.did
src/voting_power_ledger/: Cargo.toml  lib.rs  utils.rs  voting_power_ledger.did
src/voting_token/: Cargo.toml  lib.rs  utils.rs  voting_token.did
src/votings/: Cargo.toml  lib.rs  utils.rs  votings.did
