[package]
name = "union_wallet"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
ic-cdk = "0.2.4"
ic-cdk-macros = "0.2.4"
serde = "1.0.126"
candid = "0.7.0-beta.1"
union-utils = { path = "../union-utils" }
